--- a/plant_disease_model_training_predicting.ipynb
+++ b/plant_disease_model_training_predicting.ipynb
@@ -1238,7 +1238,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "NEED TO WORK ON\n"
+      ],
       "metadata": {
         "id": "EW1GAAmFU7fG"
       }
@@ -1603,346 +1605,6 @@
             "All visualizations have been saved to your Google Drive:\n",
             "/content/drive/MyDrive/PlantDiseaseProject/evaluation/\n",
             "==================================================\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import tensorflow as tf\n",
-        "from tensorflow.keras.models import load_model\n",
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "import pandas as pd\n",
-        "import os\n",
-        "import time\n",
-        "from sklearn.metrics import classification_report, confusion_matrix\n",
-        "from google.colab import files, drive\n",
-        "\n",
-        "print(\"\\n\" + \"=\"*50)\n",
-        "print(\"🌿 PLANT DISEASE MODEL EVALUATION WITH CLASS ALIGNMENT 🌿\")\n",
-        "print(\"=\"*50 + \"\\n\")\n",
-        "\n",
-        "# 1. Create project directories\n",
-        "os.makedirs('/content/drive/MyDrive/PlantDiseaseProject/evaluation', exist_ok=True)\n",
-        "\n",
-        "# 2. Load your model\n",
-        "MODEL_PATH = '/content/drive/MyDrive/PlantDiseaseProject/model/plant_disease_model.h5'\n",
-        "try:\n",
-        "    model = load_model(MODEL_PATH)\n",
-        "    print(\"✅ Model loaded successfully\")\n",
-        "except Exception as e:\n",
-        "    print(f\"❌ Error loading model: {e}\")\n",
-        "    raise\n",
-        "\n",
-        "# 3. Get model information\n",
-        "IMAGE_SIZE = model.input_shape[1:3]  # Extract input shape from model\n",
-        "print(f\"Model expects input images of size: {IMAGE_SIZE[0]}x{IMAGE_SIZE[1]}\")\n",
-        "NUM_CLASSES = model.output_shape[1]  # Get number of output classes\n",
-        "print(f\"Model predicts {NUM_CLASSES} different classes\")\n",
-        "\n",
-        "# 4. Set dataset paths\n",
-        "TRAIN_PATH = \"/content/PlantDoc-Dataset/train\"\n",
-        "TEST_PATH = \"/content/PlantDoc-Dataset/test\"\n",
-        "\n",
-        "print(f\"\\nUsing training data from: {TRAIN_PATH}\")\n",
-        "print(f\"Using test data from: {TEST_PATH}\")\n",
-        "\n",
-        "# 5. Create a fixed class mapping that matches the model\n",
-        "# Define a fixed mapping with 28 classes (matching model output)\n",
-        "fixed_class_mapping = {\n",
-        "    0: \"Apple_scab\",\n",
-        "    1: \"Apple_black_rot\",\n",
-        "    2: \"Apple_cedar_apple_rust\",\n",
-        "    3: \"Apple_healthy\",\n",
-        "    4: \"Blueberry_healthy\",\n",
-        "    5: \"Cherry_powdery_mildew\",\n",
-        "    6: \"Cherry_healthy\",\n",
-        "    7: \"Corn_cercospora_leaf_spot\",\n",
-        "    8: \"Corn_common_rust\",\n",
-        "    9: \"Corn_northern_leaf_blight\",\n",
-        "    10: \"Corn_healthy\",\n",
-        "    11: \"Grape_black_rot\",\n",
-        "    12: \"Grape_esca_black_measles\",\n",
-        "    13: \"Grape_leaf_blight\",\n",
-        "    14: \"Grape_healthy\",\n",
-        "    15: \"Orange_haunglongbing\",\n",
-        "    16: \"Peach_bacterial_spot\",\n",
-        "    17: \"Peach_healthy\",\n",
-        "    18: \"Pepper_bacterial_spot\",\n",
-        "    19: \"Pepper_healthy\",\n",
-        "    20: \"Potato_early_blight\",\n",
-        "    21: \"Potato_late_blight\",\n",
-        "    22: \"Potato_healthy\",\n",
-        "    23: \"Raspberry_healthy\",\n",
-        "    24: \"Soybean_healthy\",\n",
-        "    25: \"Squash_powdery_mildew\",\n",
-        "    26: \"Strawberry_leaf_scorch\",\n",
-        "    27: \"Strawberry_healthy\"  # This class might be missing in your test set\n",
-        "}\n",
-        "\n",
-        "# Check if all classes exist in the dataset\n",
-        "print(\"\\nChecking class presence in the dataset:\")\n",
-        "available_classes = [d for d in os.listdir(TRAIN_PATH) if os.path.isdir(os.path.join(TRAIN_PATH, d))]\n",
-        "for idx, class_name in fixed_class_mapping.items():\n",
-        "    if class_name in available_classes:\n",
-        "        print(f\"✓ Class {idx}: {class_name} - Found\")\n",
-        "    else:\n",
-        "        print(f\"✗ Class {idx}: {class_name} - Missing\")\n",
-        "\n",
-        "# 6. Generate custom prediction and evaluation function\n",
-        "def custom_evaluate():\n",
-        "    # Create data generator\n",
-        "    datagen = ImageDataGenerator(\n",
-        "        preprocessing_function=tf.keras.applications.mobilenet_v2.preprocess_input\n",
-        "    )\n",
-        "\n",
-        "    # Load test data without class restrictions\n",
-        "    test_generator = datagen.flow_from_directory(\n",
-        "        TEST_PATH,\n",
-        "        target_size=IMAGE_SIZE,\n",
-        "        batch_size=32,\n",
-        "        class_mode='categorical',\n",
-        "        shuffle=False\n",
-        "    )\n",
-        "\n",
-        "    print(f\"\\nFound {test_generator.num_classes} classes in the test data\")\n",
-        "    dataset_classes = list(test_generator.class_indices.keys())\n",
-        "\n",
-        "    # Map dataset classes to model classes\n",
-        "    class_mapping = {}\n",
-        "    for i, class_name in enumerate(dataset_classes):\n",
-        "        # Find the matching index in the fixed mapping\n",
-        "        for idx, fixed_name in fixed_class_mapping.items():\n",
-        "            if class_name == fixed_name:\n",
-        "                class_mapping[i] = idx\n",
-        "                break\n",
-        "\n",
-        "    print(f\"Mapped {len(class_mapping)} classes from dataset to model classes\")\n",
-        "\n",
-        "    # Make predictions on test data\n",
-        "    print(\"\\nGenerating predictions...\")\n",
-        "    test_generator.reset()\n",
-        "\n",
-        "    all_true_classes = []\n",
-        "    all_predicted_classes = []\n",
-        "    all_scores = []\n",
-        "    sample_images = []\n",
-        "    sample_true = []\n",
-        "    sample_pred = []\n",
-        "    sample_conf = []\n",
-        "\n",
-        "    # Process batches\n",
-        "    for i in range(len(test_generator)):\n",
-        "        images, labels = test_generator.next()\n",
-        "\n",
-        "        # Get predictions\n",
-        "        predictions = model.predict(images, verbose=0)\n",
-        "\n",
-        "        # Convert one-hot encoded labels to class indices\n",
-        "        true_classes = np.argmax(labels, axis=1)\n",
-        "        predicted_classes = np.argmax(predictions, axis=1)\n",
-        "\n",
-        "        # Save sample images for visualization\n",
-        "        if i == 0:\n",
-        "            for j in range(min(9, len(images))):\n",
-        "                sample_images.append(images[j])\n",
-        "                true_idx = true_classes[j]\n",
-        "                pred_idx = predicted_classes[j]\n",
-        "                true_name = dataset_classes[true_idx]\n",
-        "\n",
-        "                # Find the model class index\n",
-        "                mapped_pred_idx = -1\n",
-        "                for k, fixed_name in fixed_class_mapping.items():\n",
-        "                    if fixed_name == dataset_classes[pred_idx]:\n",
-        "                        mapped_pred_idx = k\n",
-        "                        break\n",
-        "\n",
-        "                # Get confidence score\n",
-        "                confidence = predictions[j][mapped_pred_idx] * 100 if mapped_pred_idx != -1 else 0\n",
-        "\n",
-        "                sample_true.append(true_name)\n",
-        "                sample_pred.append(dataset_classes[pred_idx])\n",
-        "                sample_conf.append(confidence)\n",
-        "\n",
-        "        # Collect all results\n",
-        "        all_true_classes.extend(true_classes)\n",
-        "        all_predicted_classes.extend(predicted_classes)\n",
-        "\n",
-        "    # Calculate accuracy manually\n",
-        "    correct = sum(1 for t, p in zip(all_true_classes, all_predicted_classes) if dataset_classes[t] == dataset_classes[p])\n",
-        "    total = len(all_true_classes)\n",
-        "    accuracy = correct / total * 100\n",
-        "\n",
-        "    print(f\"\\n===== MODEL PERFORMANCE =====\")\n",
-        "    print(f\"Test Accuracy: {accuracy:.2f}%\")\n",
-        "    print(f\"Correctly classified: {correct}/{total} images\")\n",
-        "\n",
-        "    # Create a simplified confusion matrix with available classes\n",
-        "    cm = confusion_matrix(all_true_classes, all_predicted_classes)\n",
-        "    plt.figure(figsize=(12, 10))\n",
-        "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues',\n",
-        "               xticklabels=dataset_classes,\n",
-        "               yticklabels=dataset_classes)\n",
-        "    plt.xlabel('Predicted', fontsize=14)\n",
-        "    plt.ylabel('True', fontsize=14)\n",
-        "    plt.title('Confusion Matrix', fontsize=16)\n",
-        "    plt.xticks(rotation=90)\n",
-        "    plt.tight_layout()\n",
-        "    plt.savefig('/content/drive/MyDrive/PlantDiseaseProject/evaluation/confusion_matrix.png', dpi=300)\n",
-        "    plt.show()\n",
-        "\n",
-        "    # Display sample predictions\n",
-        "    plt.figure(figsize=(15, 12))\n",
-        "    for i in range(len(sample_images)):\n",
-        "        plt.subplot(3, 3, i+1)\n",
-        "        plt.imshow(sample_images[i]/255.0)  # Normalize for display\n",
-        "\n",
-        "        # Set title with prediction information\n",
-        "        title = f\"True: {sample_true[i]}\\nPred: {sample_pred[i]}\\nConf: {sample_conf[i]:.1f}%\"\n",
-        "        plt.title(title, fontsize=10)\n",
-        "        plt.axis('off')\n",
-        "\n",
-        "    plt.tight_layout()\n",
-        "    plt.savefig('/content/drive/MyDrive/PlantDiseaseProject/evaluation/sample_predictions.png', dpi=300)\n",
-        "    plt.show()\n",
-        "\n",
-        "    # Generate dataset distribution visualization\n",
-        "    class_counts = {'train': {}, 'test': {}}\n",
-        "\n",
-        "    # Count samples per class\n",
-        "    for class_name in available_classes:\n",
-        "        train_dir = os.path.join(TRAIN_PATH, class_name)\n",
-        "        test_dir = os.path.join(TEST_PATH, class_name)\n",
-        "\n",
-        "        if os.path.exists(train_dir):\n",
-        "            class_counts['train'][class_name] = len([f for f in os.listdir(train_dir)\n",
-        "                                                    if f.lower().endswith(('.jpg', '.jpeg', '.png'))])\n",
-        "\n",
-        "        if os.path.exists(test_dir):\n",
-        "            class_counts['test'][class_name] = len([f for f in os.listdir(test_dir)\n",
-        "                                                  if f.lower().endswith(('.jpg', '.jpeg', '.png'))])\n",
-        "\n",
-        "    # Sort by count\n",
-        "    class_counts['train'] = {k: v for k, v in sorted(class_counts['train'].items(), key=lambda x: x[1], reverse=True)}\n",
-        "    class_counts['test'] = {k: v for k, v in sorted(class_counts['test'].items(), key=lambda x: x[1], reverse=True)}\n",
-        "\n",
-        "    # Plot distribution\n",
-        "    plt.figure(figsize=(15, 10))\n",
-        "    plt.subplot(2, 1, 1)\n",
-        "    plt.bar(class_counts['train'].keys(), class_counts['train'].values(), color='skyblue')\n",
-        "    plt.title('Training Dataset Distribution', fontsize=14)\n",
-        "    plt.xticks(rotation=90)\n",
-        "    plt.ylabel('Number of Images')\n",
-        "\n",
-        "    plt.subplot(2, 1, 2)\n",
-        "    plt.bar(class_counts['test'].keys(), class_counts['test'].values(), color='lightgreen')\n",
-        "    plt.title('Test Dataset Distribution', fontsize=14)\n",
-        "    plt.xticks(rotation=90)\n",
-        "    plt.ylabel('Number of Images')\n",
-        "\n",
-        "    plt.tight_layout()\n",
-        "    plt.savefig('/content/drive/MyDrive/PlantDiseaseProject/evaluation/class_distribution.png', dpi=300)\n",
-        "    plt.show()\n",
-        "\n",
-        "# 7. Run the custom evaluation\n",
-        "custom_evaluate()\n",
-        "\n",
-        "print(\"\\n\" + \"=\"*50)\n",
-        "print(\"EVALUATION COMPLETE!\")\n",
-        "print(\"All visualizations have been saved to your Google Drive:\")\n",
-        "print(\"/content/drive/MyDrive/PlantDiseaseProject/evaluation/\")\n",
-        "print(\"=\"*50)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "A81c8OJnZ-Sx",
-        "outputId": "d0572082-f05b-4e39-f58c-3dbb82a5e821"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "==================================================\n",
-            "🌿 PLANT DISEASE MODEL EVALUATION WITH CLASS ALIGNMENT 🌿\n",
-            "==================================================\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Model loaded successfully\n",
-            "Model expects input images of size: 224x224\n",
-            "Model predicts 28 different classes\n",
-            "\n",
-            "Using training data from: /content/PlantDoc-Dataset/train\n",
-            "Using test data from: /content/PlantDoc-Dataset/test\n",
-            "\n",
-            "Checking class presence in the dataset:\n",
-            "✗ Class 0: Apple_scab - Missing\n",
-            "✗ Class 1: Apple_black_rot - Missing\n",
-            "✗ Class 2: Apple_cedar_apple_rust - Missing\n",
-            "✗ Class 3: Apple_healthy - Missing\n",
-            "✗ Class 4: Blueberry_healthy - Missing\n",
-            "✗ Class 5: Cherry_powdery_mildew - Missing\n",
-            "✗ Class 6: Cherry_healthy - Missing\n",
-            "✗ Class 7: Corn_cercospora_leaf_spot - Missing\n",
-            "✗ Class 8: Corn_common_rust - Missing\n",
-            "✗ Class 9: Corn_northern_leaf_blight - Missing\n",
-            "✗ Class 10: Corn_healthy - Missing\n",
-            "✗ Class 11: Grape_black_rot - Missing\n",
-            "✗ Class 12: Grape_esca_black_measles - Missing\n",
-            "✗ Class 13: Grape_leaf_blight - Missing\n",
-            "✗ Class 14: Grape_healthy - Missing\n",
-            "✗ Class 15: Orange_haunglongbing - Missing\n",
-            "✗ Class 16: Peach_bacterial_spot - Missing\n",
-            "✗ Class 17: Peach_healthy - Missing\n",
-            "✗ Class 18: Pepper_bacterial_spot - Missing\n",
-            "✗ Class 19: Pepper_healthy - Missing\n",
-            "✗ Class 20: Potato_early_blight - Missing\n",
-            "✗ Class 21: Potato_late_blight - Missing\n",
-            "✗ Class 22: Potato_healthy - Missing\n",
-            "✗ Class 23: Raspberry_healthy - Missing\n",
-            "✗ Class 24: Soybean_healthy - Missing\n",
-            "✗ Class 25: Squash_powdery_mildew - Missing\n",
-            "✗ Class 26: Strawberry_leaf_scorch - Missing\n",
-            "✗ Class 27: Strawberry_healthy - Missing\n",
-            "Found 236 images belonging to 27 classes.\n",
-            "\n",
-            "Found 27 classes in the test data\n",
-            "Mapped 0 classes from dataset to model classes\n",
-            "\n",
-            "Generating predictions...\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'DirectoryIterator' object has no attribute 'next'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-27da4363c669>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    238\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    239\u001b[0m \u001b[0;31m# 7. Run the custom evaluation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 240\u001b[0;31m \u001b[0mcustom_evaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    241\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    242\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"=\"\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-5-27da4363c669>\u001b[0m in \u001b[0;36mcustom_evaluate\u001b[0;34m()\u001b[0m\n\u001b[1;32m    126\u001b[0m     \u001b[0;31m# Process batches\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_generator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 128\u001b[0;31m         \u001b[0mimages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_generator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    129\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    130\u001b[0m         \u001b[0;31m# Get predictions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'DirectoryIterator' object has no attribute 'next'"
           ]
         }
       ]
